<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_for_you">

    <fragment
        android:id="@+id/navigation_for_you"
        android:name="com.example.vinorate.ui.forYou.ForYouFragment"
        android:label="@string/title_for_you"
        tools:layout="@layout/fragment_for_you" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.vinorate.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.example.vinorate.ui.wishlist.WishlistFragment"
        android:label="@string/title_Wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.vinorate.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_wine_details"
        android:name="com.example.vinorate.ui.WineDetails.WineDetailsFragment"
        android:label="@string/title_wine_details"
        tools:layout="@layout/fragment_wine_details" />

</navigation>